--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,31 @@
-name: Fitness AI Workflow
+name: Letter Generator Workflow
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
-  build:
+  generate-letters:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.10"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Run Letter Generator
+        run: |
+          python letter_generator.py
 
-    - name: Run Streamlit App
-      run: |
-        streamlit run app.py --server.headless true --server.port 8501
+      - name: Commit and push generated letters
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
+          git add ./Output/*.txt || echo "No files to add"
+          git commit -m "Auto-generated letters [skip ci]" || echo "No changes to commit"
+          git push
