--- a/.github/workflows/letters.yml
+++ b/.github/workflows/letters.yml
@@ -1,31 +1,32 @@
-name: Letter Generator Workflow
+name: Generate Letters
 
 on:
   push:
     branches:
       - main
 
-jobs:
-  generate-letters:
-    runs-on: ubuntu-latest
+permissions:
+  contents: write   # 👈 this gives permission to push changes
 
+jobs:
+  build:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.x"
 
-      - name: Run Letter Generator
-        run: |
-          python letter_generator.py
+      - name: Run script
+        run: python letter_generator.py
 
-      - name: Commit and push generated letters
+      - name: Commit changes
         run: |
           git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
-          git add ./Output/*.txt || echo "No files to add"
+          git config --global user.email "github-actions@github.com"
+          git add Output/
           git commit -m "Auto-generated letters [skip ci]" || echo "No changes to commit"
           git push
